fixed broken links

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <h1 class="header">Aas224</h1>
 	<p class="header">Tutorials.</p>
 	<ul>
-	  <li><a class="buttons" href="https://github.com/justincely/AAS224/lightcurve_tutorial.html">Lightcurve</a></li>
-	  <li><a class="buttons" href="https://github.com/justincely/AAS224/splittag_tutorial.html">Splittag</a></li>
-	  <li><a class="buttons" href="https://github.com/justincely/AAS224/timefilter_tutorial.html">Timefilter</a></li>
-	  <li><a class="buttons" href="https://github.com/justincely/AAS224/filtering_tutorial.html">PHA Filtering</a></li>
+	  <li><a class="buttons" href="http://justincely.github.io/AAS224/lightcurve_tutorial.html">Lightcurve</a></li>
+	  <li><a class="buttons" href="http://justincely.github.io/AAS224/splittag_tutorial.html">Splittag</a></li>
+	  <li><a class="buttons" href="http://justincely.github.io/AAS224/timefilter_tutorial.html">Timefilter</a></li>
+	  <li><a class="buttons" href="http://justincely.github.io/AAS224/filtering_tutorial.html">PHA Filtering</a></li>
         </ul>
 
 
