--- a/index.html
+++ b/index.html
@@ -19,12 +19,11 @@
         <h1 class="header">Aas224</h1>
 	<p class="header">Tutorials.</p>
 	<ul>
-	  <li><a class="buttons" href="http://justincely.github.io/AAS224/lightcurve_tutorial.html">Lightcurve</a></li>
-	  <li><a class="buttons" href="http://justincely.github.io/AAS224/splittag_tutorial.html">Splittag</a></li>
-	  <li><a class="buttons" href="http://justincely.github.io/AAS224/timefilter_tutorial.html">Timefilter</a></li>
-	  <li><a class="buttons" href="http://justincely.github.io/AAS224/filtering_tutorial.html">PHA Filtering</a></li>
+	  <li><a class="button" href="https://justincely.github.io/AAS224/lightcurve_tutorial.html">Lightcurve</a></li>
+	  <li><a class="button" href="https://justincely.github.io/AAS224/splittag_tutorial.html">Splittag</a></li>
+	  <li><a class="button" href="https://justincely.github.io/AAS224/timefilter_tutorial.html">Timefilter</a></li>
+	  <li><a class="button" href="https://justincely.github.io/AAS224/filtering_tutorial.html">PHA Filtering</a></li>
         </ul>
-
 
         <p class="header">My poster and supporting material for the 224th meeting of the American Astronomical Society in Boston.</p>
 
