--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Aas224 by justincely</title>
+    <title>AAS224</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -17,7 +17,7 @@
     <div class="wrapper">
       <header>
         <h1 class="header">Aas224</h1>
-	<p class="header">Tutorials.</p>
+	<p class="header">Tutorials can be found below.</p>
 	<ul>
 	  <li><a class="button" href="https://justincely.github.io/AAS224/lightcurve_tutorial.html">Lightcurve</a></li>
 	  <li><a class="button" href="https://justincely.github.io/AAS224/splittag_tutorial.html">Splittag</a></li>
@@ -25,7 +25,7 @@
 	  <li><a class="button" href="https://justincely.github.io/AAS224/filtering_tutorial.html">PHA Filtering</a></li>
         </ul>
 
-        <p class="header">My poster and supporting material for the 224th meeting of the American Astronomical Society in Boston.</p>
+        <p class="header">My poster, figures, code, and data can be found below:</p>
 
         <ul>
           <li class="download"><a class="buttons" href="https://github.com/justincely/AAS224/zipball/master">Download ZIP</a></li>
@@ -39,9 +39,9 @@
       </header>
       <section>
         <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a name="welcome" class="anchor" href="#welcome"><span class="octicon octicon-link"></span></a>Welcome to the online version of Advanced Time-domain Calibrations and Data-reduction Techniques with HST/COS.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>Here you can find html versions of the tutorials mentioned on my poster.</p>
 
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
@@ -51,24 +51,19 @@ $ git checkout gh-pages
 <p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
 
 <h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a name="github" class="anchor" href="#github"><span class="octicon octicon-link"></span></a>Github Repository</h3>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<p>The poster, all figures, data, code, tutorials, and this very website are available in a git version control repository.  You may download or visit this repository via the links on the left panel.  </p>
 
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>You may also clone the repository by:<p>
+<pre><code>
+$ git clone https://github.com/justincely/AAS224.git
+<pre><code>
 
 <h3>
 <a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p>Having trouble or have questions? Contact Justin Ely at <a href="mailto:ely@stsci.edu">ely@stsci.edu</a> </p>
       </section>
       <footer>
         <p><small>Hosted on <a href="http://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
