forgot to close my pre tags

--- a/index.html
+++ b/index.html
@@ -43,27 +43,21 @@
 
 <p>Here you can find html versions of the tutorials mentioned on my poster.</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
 
 <h3>
 <a name="github" class="anchor" href="#github"><span class="octicon octicon-link"></span></a>Github Repository</h3>
 
 <p>The poster, all figures, data, code, tutorials, and this very website are available in a git version control repository.  You may download or visit this repository via the links on the left panel.  </p>
 
-<p>You may also clone the repository by:<p>
+<p>Alternatively, if you are git-savvy, you may also clone the repository:<p>
 <pre><code>
 $ git clone https://github.com/justincely/AAS224.git
-<pre><code>
+</pre></code>
 
 <h3>
 <a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>Having trouble or have questions? Contact Justin Ely at <a href="mailto:ely@stsci.edu">ely@stsci.edu</a> </p>
+<p>Having trouble or have questions? Contact Justin Ely at <a href="mailto:ely@stsci.edu">ely@stsci.edu</a> or the COS helpdesk at <a href="mailto:help@stsci.edu">help@stsci.edu</a> . </p>
       </section>
       <footer>
         <p><small>Hosted on <a href="http://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
