more text, need to expand more

--- a/index.html
+++ b/index.html
@@ -41,7 +41,12 @@
         <h3>
 <a name="welcome" class="anchor" href="#welcome"><span class="octicon octicon-link"></span></a>Welcome to the online version of Advanced Time-domain Calibrations and Data-reduction Techniques with HST/COS.</h3>
 
-<p>Here you can find html versions of the tutorials mentioned on my poster.</p>
+<p>This page is here to provide more in-depth information than could be presented in the regular poster.  To that effect, tutorials have been prepared to walk through 
+actual calibrations using real data.
+
+Static html versions of the tutorials can be found on the left.
+
+Dynamic, iPython notebooks can be found by downloading or cloning the entire repository.</p>
 
 
 <h3>
@@ -50,8 +55,7 @@
 <p>The poster, all figures, data, code, tutorials, and this very website are available in a git version control repository.  You may download or visit this repository via the links on the left panel.  </p>
 
 <p>Alternatively, if you are git-savvy, you may also clone the repository:<p>
-<pre><code>
-$ git clone https://github.com/justincely/AAS224.git
+<pre><code>$ git clone https://github.com/justincely/AAS224.git
 </pre></code>
 
 <h3>
