more sections on ipython notebook

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1 class="header">Aas224</h1>
-	<p class="header">Tutorials can be found below.</p>
+        <h1 class="header">AAS224</h1>
+	<p class="header">Static tutorials can be found below.</p>
 	<ul>
 	  <li><a class="button" href="https://justincely.github.io/AAS224/lightcurve_tutorial.html">Lightcurve</a></li>
 	  <li><a class="button" href="https://justincely.github.io/AAS224/splittag_tutorial.html">Splittag</a></li>
@@ -42,12 +42,23 @@
 <a name="welcome" class="anchor" href="#welcome"><span class="octicon octicon-link"></span></a>Welcome to the online version of Advanced Time-domain Calibrations and Data-reduction Techniques with HST/COS.</h3>
 
 <p>This page is here to provide more in-depth information than could be presented in the regular poster.  To that effect, tutorials have been prepared to walk through 
-actual calibrations using real data.
+actual calibrations using the described tools and real data.</p>
 
-Static html versions of the tutorials can be found on the left.
+<p>Static html versions of the tutorials can be found on the left.</p>
 
-Dynamic, iPython notebooks can be found by downloading or cloning the entire repository.</p>
+<p>Dynamic, iPython notebooks can be found by downloading or cloning the entire repository.</p>
 
+<h3><a name="ipython" class="anchor" href="#ipython"><span class="octicon octicon-link"></span></a>iPython Notebooks</h3>
+
+<p>The tutorials are written in Python using the iPython notebook.  The notebook provides a simple web-based interface to write, execute, and share Python code, along with
+the ability to include notes written in Markdown.</p>
+
+<p>To open an iPython Notebook, simply start the notebook server after downloading (or cloning) this repository:<p>
+<pre><code>$ cd AAS224
+ipython notebook
+</pre></code>
+
+<p>For more information and installation instructions, visit <a href="http://ipython.org/notebook.html">http://ipython.org/notebook.html</a></p>
 
 <h3>
 <a name="github" class="anchor" href="#github"><span class="octicon octicon-link"></span></a>Github Repository</h3>
