--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ the ability to include notes written in Markdown.</p>
 <p>To open an iPython Notebook, simply start the notebook server after downloading (or cloning) this repository:<p>
 <pre><code>$ cd AAS224
 ipython notebook
-</pre></code>
+$</pre></code>
 
 <p>For more information and installation instructions, visit <a href="http://ipython.org/notebook.html">http://ipython.org/notebook.html</a></p>
 
