--- a/index.html
+++ b/index.html
@@ -44,19 +44,27 @@
 <p>This page is here to provide more in-depth information than could be presented in the regular poster.  To that effect, tutorials have been prepared to walk through 
 actual calibrations using the described tools and real data.</p>
 
-<p>Static html versions of the tutorials can be found on the left.</p>
+<ul>
+  <li>Static, HTML, versions of the tutorials can be found on the left bar.</li>
+  <li>Dynamic, re-runnable iPython notebooks of the tutorials can be found by downloading or cloning the repository</li>
+</ul>
 
-<p>Dynamic, iPython notebooks can be found by downloading or cloning the entire repository.</p>
 
 <h3><a name="ipython" class="anchor" href="#ipython"><span class="octicon octicon-link"></span></a>iPython Notebooks</h3>
 
-<p>The tutorials are written in Python using the iPython notebook.  The notebook provides a simple web-based interface to write, execute, and share Python code, along with
+<p>The tutorials are written in Python using the iPython notebook.  This provides a simple web-based interface to write, execute, and share Python code, along with
 the ability to include notes written in Markdown.</p>
+
+<p>Running the tutorials may require the installation of a few non-standard python packages.  A simple way to get the majority of these packages is with the STScI Ureka 
+installer. <a href="http://ssb.stsci.edu/ureka/">Ureka</a> </p>
+
+<p>The lightcurve tutorial requires one additional package, the installation instructions of which are detailed in the intro of the tutorial.  Additional information
+can be found on the lightcurve package webpage <a href="https://justincely.github.io/lightcurve">here</a>.</p>
 
 <p>To open an iPython Notebook, simply start the notebook server after downloading (or cloning) this repository:<p>
 <pre><code>$ cd AAS224
-ipython notebook
-$</pre></code>
+$ipython notebook
+</pre></code>
 
 <p>For more information and installation instructions, visit <a href="http://ipython.org/notebook.html">http://ipython.org/notebook.html</a></p>
 
