re-worded links

--- a/index.html
+++ b/index.html
@@ -55,15 +55,14 @@ actual calibrations using the described tools and real data.</p>
 <p>The tutorials are written in Python using the iPython notebook.  This provides a simple web-based interface to write, execute, and share Python code, along with
 the ability to include notes written in Markdown.</p>
 
-<p>Running the tutorials may require the installation of a few non-standard python packages.  A simple way to get the majority of these packages is with the STScI Ureka 
-installer. <a href="http://ssb.stsci.edu/ureka/">Ureka</a> </p>
-
-<p>The lightcurve tutorial requires one additional package, the installation instructions of which are detailed in the intro of the tutorial.  Additional information
-can be found on the lightcurve package webpage <a href="https://justincely.github.io/lightcurve">here</a>.</p>
+<p>Running the tutorials may require the installation of a few non-standard python packages.  A simple way to get the majority of these packages is with the 
+<a href="http://ssb.stsci.edu/ureka/">STScI Ureka installer.</a> The lightcurve tutorial requires one additional package, the installation instructions of
+ which are detailed in the intro of the tutorial.  Additional information
+can be found on the <a href="https://justincely.github.io/lightcurve">lightcurve package webpage.</a></p>
 
 <p>To open an iPython Notebook, simply start the notebook server after downloading (or cloning) this repository:<p>
 <pre><code>$ cd AAS224
-$ipython notebook
+$ ipython notebook
 </pre></code>
 
 <p>For more information and installation instructions, visit <a href="http://ipython.org/notebook.html">http://ipython.org/notebook.html</a></p>
